--- a/angular.json
+++ b/angular.json
@@ -11,11 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/portfolio",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -28,12 +28,14 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "baseHref": "/portfolio/" 
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
-              "outputPath": "dist/portfolio",
-              "baseHref": "/portfolio/", 
               "budgets": [
                 {
                   "type": "initial",
