--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.8",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "html2pdf.js": "^0.10.2",
     "rxjs": "~7.8.0",
